style: 改变md文档位置

--- a/docs/机械臂奇异点.md
+++ b/docs/机械臂奇异点.md
@@ -12,20 +12,20 @@
 
 ## 腕部奇异位形
 
-![腕部奇异位形](asset/腕部奇异.png)
+![腕部奇异位形](../asset/腕部奇异.png)
 
 关节4和关节6同时以相反的速度旋转时，末端执行器位置不会发生改变
 
 ## 肩部奇异位形
 
-![肩部奇异位形](asset/肩部奇异.png)
+![肩部奇异位形](../asset/肩部奇异.png)
 
 末端执行器roll轴与关节1旋转轴重合时，关节1旋转并不会使得末端执行器位置改变
 
 ## 肘部奇异位形
 
-![肘部奇异位形](asset/肘部奇异1.png)
-![肘部奇异位形](asset/肘部奇异2.png)
-![肘部奇异位形](asset/肘部奇异3.png)
+![肘部奇异位形](../asset/肘部奇异1.png)
+![肘部奇异位形](../asset/肘部奇异2.png)
+![肘部奇异位形](../asset/肘部奇异3.png)
 
 当两旋转轴不共线时，可以通过改变速度大小得到任意方向的速度；当两旋转轴共线时，两旋转轴传递到末端执行器的速度方向相同，能够得到的速度方向受限
